--- a/params.example.yaml
+++ b/params.example.yaml
@@ -4,7 +4,7 @@ profiles:
   -
     profile_name: "br-ne1"
     lock_mode: "COMPLIANCE"
-    mgc_path: "../magalu/mgc/cli/mgc"
+    mgc_path: "mgc"
   -
     profile_name: "br-se1"
     lock_mode: "COMPLIANCE"
