--- a/params.example.yaml
+++ b/params.example.yaml
@@ -5,6 +5,10 @@ profiles:
     profile_name: "br-ne1"
     lock_mode: "COMPLIANCE"
     mgc_path: "../magalu/mgc/cli/mgc"
+  -    
+    profile_name: "br-ne1-2"
+    lock_mode: "COMPLIANCE"
+    mgc_path: "../magalu/mgc/cli/mgc"
   -
     profile_name: "br-se1"
     lock_mode: "COMPLIANCE"
