--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ markers = [
     "bucket_versioning: Bucket Versioning",
     "cli: Tests using CLI",
     "multiple_objects: Tests involving operations with multiple objects on the same bucket",
+    "big_objects": Tests with files bigger than 5 mb,
     "rapid: quick expected execution magnitude",
     "regular: regular time expected execution magnitude",
     "slow: slow expected execution magnitude",
